#-------------------------------------
# ChangeLog file for package Detector
#-------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

=======

Tag: V02-00-26
2021-11-05 Mikhail Dubrovin
- src/PyDataAccess.py, src/AreaDetector.py, app/epix10ka_test_calibcycles
	- code cleaning - remove blanks and separators
- examples/test-issues-2021.py - add issue_2021_10-25
- src/UtilsGraphics.py - adopt from lcls2
- app/datinfo - use info_pixel_gain_mode_fractions
- src/UtilsEpix10ka.py
    - use comprehenson lists in info_gain_mode_arrays1, etc.
    - add methods event_constants*, map_gain_range_index, table_nxn_epix10ka_from_ndarr
    - code cleaning
- examples/test-issues-2021.py - add issue_2021_10_27
- app/det_calib_ave_and_max - change printing content
- app/det_ndarr_raw_proc - remove spaces and separators
- add app/det_raw_calib_image - add exit if nargs<3
- app/epix10ka_test_calibcycles - cosmetic update
- app/epix10ka_calib_components - complete replacement using new development from lcls2, add -t 101-103
- src/UtilsCalib.py - add method mean_constrained
- examples/ex_epix10ka_calibrows.py - calibration rows averaging for test purpose
- src/UtilsGraphics.py - add methods plot and axis_plot

Tag: V02-00-25
2021-09-22 Daniel Damiani
- add support for Alvium detector
	modified:   src/DetectorTypes.py
	modified:   src/PyDataAccess.py
	modified:   src/PyDetectorAccess.py

Tag: V02-00-24
2021-08-27 Mikhail Dubrovin
- app/det_calib_ave_and_max - fix issue with CALIBDIR=None

Tag: V02-00-23
2021-07-19 Mikhail Dubrovin
- UtilsEpix10kaCalib.py - fix algorithm for saving pedestals with offsetph

Tag: V02-00-22
2021-07-04 Mikhail Dubrovin
- by Philip request add method save_epix10ka_ctype_in_repo with tests
	new file:   examples/ex_epix10ka_save_ctype_in_repo.py
	modified:   src/UtilsEpix10kaCalib.py

Tag: V02-00-21
2021-07-01 Mikhail Dubrovin