@@ -9,6 +9,13 @@ reverse time order.
 
 =======
 
+???? Tag: V02-00-27
+2021-11-15 Mikhail Dubrovin
+- cosmetic update - remove blanks
+  app/jungfrau_dark_proc
+  app/jungfrau_ndarr_dark_proc
+  src/UtilsJungfrauCalib.py
+
 Tag: V02-00-26
 2021-11-05 Mikhail Dubrovin
 - src/PyDataAccess.py, src/AreaDetector.py, app/epix10ka_test_calibcycles
